--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,10 @@
 en:
+  activerecord:
+    attributes:
+      user:
+        current_password: "Current Password"
+        password: "Password"
+        password_confirmation: "Password Confirmation"
   layouts:
     application:
       default_title: 'MarkHolmberg.com'
