--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
   activerecord:
     attributes:
       user:
+        role_ids: 'Roles'
         current_password: "Current Password"
         password: "Password"
         password_confirmation: "Password Confirmation"
