--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,7 @@ en:
         current_password: "Current Password"
         password: "Password"
         password_confirmation: "Password Confirmation"
+        remember_me: 'Remember Me'
   layouts:
     application:
       default_title: 'MarkHolmberg.com'
